feat(api): return the cluster visible by the current user !
